# rules_ios

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE
.github/workflows/: tests.yml
data/: xcspec_evals.bzl
rules/: framework.bzl  library.bzl  module_extensions.bzl  repositories.bzl
tests/ios/frameworks/mixed-source/xc-framework-dependency/: BUILD.bazel
tests/ios/frameworks/mixed-source/xc-framework-dependency/MixedSourceFramework/Logger/: SwiftLibrary+extension.swift
tests/ios/frameworks/mixed-source/xc-framework-dependency/MixedSourceTest/: Tests.swift
